--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,8 @@
     <li>3. <a href="./dj/program?rid=336355127">电台节目</a></li>
     <li>4. <a href="./qrlogin.html">二维码登录</a></li>
     <li>4. <a href="./audio_match_demo/index.html">听歌识曲</a></li>
-    <li>5. <a href="./eapi_decrypt.html">eapi 参数和返回内容解析</a></li>
+    <li>5. <a href="./cloud.html">云盘上传</a></li>
+    <li>6. <a href="./eapi_decrypt.html">eapi 参数和返回内容解析</a></li>
   </ul>
   <style>
     html,
