feat: 增加下载、购买记录接口

--- a/public/api.html
+++ b/public/api.html
@@ -112,7 +112,7 @@
                     method: 'post',
                     data: {
                         uri: uri,
-                        data: data,
+                        data: JSON.parse(data),
                         crypto: crypto,
                     },
                 });
