--- a/public/index.html
+++ b/public/index.html
@@ -140,9 +140,9 @@
     <a href="/docs" target="_blank">📚 查看接口文档</a>
     <h2>常用示例</h2>
     <ul id="example-list">
-      <li><a href="./search?keywords=海阔天空">搜索歌曲</a></li>
-      <li><a href="./song/url/unblock?id=186016">歌曲解灰</a></li>
-      <li><a href="./comment/music?id=186016&limit=1">获取歌曲评论</a></li>
+      <li><a href="./search?keywords=这么可爱真是抱歉">搜索歌曲</a></li>
+      <li><a href="./song/url/unblock?id=1969519579">歌曲解灰</a></li>
+      <li><a href="./comment/music?id=1969519579&limit=1">获取歌曲评论</a></li>
       <li><a href="./dj/program?rid=336355127">获取电台节目</a></li>
       <li><a href="./qrlogin.html">二维码登录演示</a></li>
       <li><a href="./audio_match_demo/index.html">听歌识曲 Demo</a></li>
