chore: 更改归属权

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>网易云音乐 API Reborn</title>
+  <title>网易云音乐 API Enhanced</title>
   <style>
     html, body {
       height: 100vh;
@@ -133,7 +133,7 @@
 
 <body>
   <div class="container">
-    <h1>网易云音乐 API <span id="api-version" class="version"></span></h1>
+    <h1>网易云音乐 API Enhanced <span id="api-version" class="version"></span></h1>
     <p>🎵 这是一个持续维护的第三方网易云音乐 API 服务，兼容原版接口，支持多平台部署。</p>
     <p>当你看到这个页面时，服务已成功运行！</p>
     <p class="current-url">当前访问：<span id="current-url"></span></p>
@@ -152,7 +152,7 @@
       <li><a href="./playlist_import.html">歌单导入工具</a></li>
     </ul>
     <div class="footer">
-      <span>© 2025 网易云音乐 API Reborn &nbsp;|&nbsp; <a href="https://github.com/NeteaseCloudMusicApiReborn/api" target="_blank">GitHub</a></span>
+      <span>© 2025 网易云音乐 API Enhanced(Reborn) &nbsp;|&nbsp; <a href="https://github.com/neteasecloudmusicapienhanced/api-enhanced" target="_blank">GitHub</a></span>
     </div>
   </div>
 
