docs(playlistSubscribe): 更新该内容文档

--- a/public/index.html
+++ b/public/index.html
@@ -235,9 +235,9 @@
             </a>
           </li>
           <li class="feature-item">
-            <a href="./song/url/unblock?id=1969519579">
+            <a href="./unblock_test.html">
               <i class="mdi mdi-lock-open"></i>
-              歌曲解灰
+              解灰测试
             </a>
           </li>
           <li class="feature-item">
